fix playground layout for horizontal scrollbars

--- a/web/styles/styles.scss
+++ b/web/styles/styles.scss
@@ -137,16 +137,18 @@ a {
 
 // Editor panel
 #editor-panel {
+  @include layout-vertical;
   @include layout-relative;
 }
 
 #editor-host {
-  @include layout-fit;
+  @include layout-flex;
+  @include layout-relative;
   margin: 8px 0 0 0;
   padding: 0 8px;
 
   .CodeMirror {
-    width: 100%;
+    @include layout-fit;
     height: 100%;
     font-family: $editor-font;
     font-size: $playground-editor-font-size;
